增加密码长度属性，修改部分逻辑

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:background="@null"
             android:cursorVisible="false"
             app:keyboardType="pwd"
-            android:maxLength="8"
+            app:pwdLength="8"
             app:isCursorEnable="true"
             app:pwdColor="@color/colorAccent"/>
 
