--- a/customkeyboard/src/main/res/values/attrs.xml
+++ b/customkeyboard/src/main/res/values/attrs.xml
@@ -17,6 +17,7 @@
         <attr name="rectRadius" format="dimension"/>
         <attr name="cursorHeight" format="dimension"/>
         <attr name="cursorFlashTime" format="integer"/>
+        <attr name="pwdLength" format="integer"/>
         <attr name="isCursorEnable" format="boolean"/>
         <attr name="cipherEnable" format="boolean"/>
         <attr name="cursorColor" format="color"/>
